# learn-opengl-playground

./: .gitignore  NOTES.md  README.md
includes/learnopengl/: model.h
src/1.getting_started/1.1.hello_window/: CMakeLists.txt  hello_window.cpp
src/1.getting_started/1.2.hello_window_clear/: CMakeLists.txt
src/1.getting_started/2.1.hello_triangle/: CMakeLists.txt
src/1.getting_started/2.2.hello_triangle_indexed/: CMakeLists.txt
src/1.getting_started/2.3.hello_triangle_exercise1/: CMakeLists.txt  build_run_project.bat  hello_triangle_exercise1.cpp
src/1.getting_started/2.4.hello_triangle_exercise2/: CMakeLists.txt  build_run_project.bat  hello_triangle_exercise2.cpp
src/1.getting_started/2.5.hello_triangle_exercise3/: CMakeLists.txt  build_run_project.bat  hello_triangle_exercise3.cpp
src/1.getting_started/2.6.hello_triangle_exercise4/: CMakeLists.txt  build_run_project.bat  hello_triangle_exercise4.cpp
src/1.getting_started/3.1.shaders_uniform/: CMakeLists.txt  build_project.bat  build_run_project.bat
src/1.getting_started/3.2.shaders_interpolation/: CMakeLists.txt  build_run_project.bat
src/1.getting_started/3.3.shaders_class/: CMakeLists.txt  build_run_project.bat
src/1.getting_started/3.4.shaders_exercise1/: CMakeLists.txt  build_run_project.bat  shaders_exercise1.cpp
src/1.getting_started/3.5.shaders_exercise2/: CMakeLists.txt  build_run_project.bat  shaders_exercise2.cpp
src/1.getting_started/3.6.shaders_exercise3/: 3.6.shader.vs  CMakeLists.txt  build_run_project.bat  shaders_exercise3.cpp
src/1.getting_started/4.1.textures/: CMakeLists.txt  build_run_project.bat  textures.cpp
src/1.getting_started/4.2.textures_combined/: CMakeLists.txt  build_run_project.bat  textures_combined.cpp
src/1.getting_started/4.3.textures_exercise1/: 4.3.texture.fs  CMakeLists.txt  build_run_project.bat  textures_exercise1.cpp
src/1.getting_started/4.4.textures_exercise2/: CMakeLists.txt  build_run_project.bat  textures_exercise2.cpp
src/1.getting_started/4.5.textures_exercise3/: CMakeLists.txt  build_run_project.bat  textures_exercise3.cpp
src/1.getting_started/4.6.textures_exercise4/: CMakeLists.txt  build_run_project.bat  textures_exercise4.cpp
src/1.getting_started/5.1.transformations/: CMakeLists.txt  build_run_project.bat  transformations.cpp
src/1.getting_started/5.2.transformations_exercise1/: CMakeLists.txt  build_run_project.bat  transformations_exercise1.cpp
src/1.getting_started/5.2.transformations_exercise2/: CMakeLists.txt  build_run_project.bat  transformations_exercise2.cpp
src/1.getting_started/6.1.coordinate_systems/: CMakeLists.txt  build_run_project.bat  coordinate_systems.cpp
src/1.getting_started/6.2.coordinate_systems_depth/: CMakeLists.txt  build_run_project.bat  coordinate_systems_depth.cpp
src/1.getting_started/6.3.coordinate_systems_multiple/: CMakeLists.txt  build_run_project.bat  coordinate_systems_multiple.cpp
src/1.getting_started/6.4.coordinate_systems_exercise3/: CMakeLists.txt  build_run_project.bat  coordinate_systems_exercise3.cpp
src/1.getting_started/7.1.camera_circle/: CMakeLists.txt  build_run_project.bat  camera_circle.cpp
src/1.getting_started/7.2.camera_keyboard_dt/: CMakeLists.txt  build_run_project.bat  camera_keyboard_dt.cpp
src/1.getting_started/7.3.camera_mouse_zoom/: CMakeLists.txt  build_run_project.bat  camera_mouse_zoom.cpp
src/1.getting_started/7.4.camera_class/: CMakeLists.txt  build_run_project.bat  camera_class.cpp
src/1.getting_started/7.5.camera_exercise1/: camera_exercise1.cpp
src/1.getting_started/7.6.camera_exercise2/: CMakeLists.txt  build_run_project.bat  camera_exercise2.cpp
src/2.lighting/1.colors/: CMakeLists.txt  build_run_project.bat  colors.cpp
src/2.lighting/2.1.basic_lighting_diffuse/: CMakeLists.txt  basic_lighting_diffuse.cpp  build_run_project.bat
src/2.lighting/2.2.basic_lighting_specular/: CMakeLists.txt  basic_lighting_specular.cpp  build_run_project.bat
src/2.lighting/2.3.basic_lighting_exercise1/: CMakeLists.txt  basic_lighting_exercise1.cpp  build_run_project.bat
src/2.lighting/2.4.basic_lighting_exercise2/: 2.4.basic_lighting.fs  2.4.basic_lighting.vs  CMakeLists.txt  basic_lighting_exercise2.cpp  build_run_project.bat
src/2.lighting/2.5.basic_lighting_exercise3/: 2.5.basic_lighting.fs  CMakeLists.txt  basic_lighting_exercise3.cpp  build_run_project.bat
src/2.lighting/3.1.materials/: CMakeLists.txt  build_run_project.bat  materials.cpp
src/2.lighting/3.2.materials_exercise1/: CMakeLists.txt  build_run_project.bat  materials_exercise1.cpp
src/2.lighting/4.1.lighting_maps_diffuse_map/: CMakeLists.txt  build_run_project.bat  lighting_maps_diffuse.cpp
src/2.lighting/4.2.lighting_maps_specular_map/: CMakeLists.txt  build_run_project.bat  lighting_maps_specular.cpp
src/2.lighting/4.3.lighting_maps_exercise2/: 4.3.lighting_maps.fs  CMakeLists.txt  build_run_project.bat  lighting_maps_exercise2.cpp
src/2.lighting/4.4.lighting_maps_exercise4/: 4.4.lighting_maps.fs  CMakeLists.txt  build_run_project.bat  lighting_maps_exercise4.cpp
src/2.lighting/5.1.light_casters_directional/: CMakeLists.txt  build_run_project.bat  light_casters_directional.cpp
src/2.lighting/5.2.light_casters_point/: CMakeLists.txt  build_run_project.bat  light_casters_point.cpp
src/2.lighting/5.3.light_casters_spot/: CMakeLists.txt  build_run_project.bat  light_casters_spot.cpp
src/2.lighting/5.4.light_casters_spot_soft/: CMakeLists.txt  build_run_project.bat  light_casters_spot_soft.cpp
src/2.lighting/6.multiple_lights/: CMakeLists.txt  build_run_project.bat  multiple_lights.cpp
src/2.lighting/6.multiple_lights_exercise1/: variations.txt
src/3.model_loading/1.model_loading/: CMakeLists.txt  build_run_project.bat  model_loading.cpp
src/4.advanced_opengl/5.1.framebuffers/: 5.1.framebuffers.fs  CMakeLists.txt  build_run_project.bat  framebuffers.cpp
src/5.advanced_lighting/9.ssao/: CMakeLists.txt  build_run_project.bat  ssao.cpp
src/6.pbr/2.1.1.ibl_irradiance_conversion/: CMakeLists.txt  build_run_project.bat  ibl_irradiance_conversion.cpp
(+115 files in other folders)
